--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.6.0",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "linkifyjs": "^2.1.8",
+    "material-ui-linkify": "^1.1.3",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "react-scripts": "^3.3.0",
+    "typescript": "3.7.2",
+    "url-regex": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
