--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
-    "linkifyjs": "^2.1.8",
-    "material-ui-linkify": "^1.1.3",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.0",
-    "typescript": "3.7.2",
-    "url-regex": "^5.0.0"
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
